fix alignment in step content

--- a/src/styles/_animatedscroll.scss
+++ b/src/styles/_animatedscroll.scss
@@ -42,7 +42,7 @@ $topOffset: 64px; // sticky header height
 .animation__step-content {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
+  align-items: center;
   justify-content: center;
   padding: 3.2rem;
   background: transparent;
@@ -106,11 +106,26 @@ $topOffset: 64px; // sticky header height
 }
 
 // step 3 specific styles
-@media (min-width: 600px) {
-  // prevent legend from getting too big on large displays
-  .animation__step.animation__step--3 {
-    img {
+.animation__step.animation__step--3 {
+  // keep content narrow to prevent legend image from getting too big
+  .animation__step-content {
+    & > * {
       max-width: 320px;
+    }
+  }
+}
+@media (min-width: 1280px) {
+  // bump the step content a bit on larger displays
+  .animation__step.animation__step--3 {
+    .animation__step-content {
+      & > * {
+        max-width: 16em;
+      }
+      img {
+        max-width: 320px;
+        width: 320px;
+        margin-right: 160px;
+      }
     }
   }
 }
